--- a/package.json
+++ b/package.json
@@ -83,13 +83,22 @@
     "@angular/router": "~4.3.1",
     "@angularclass/hmr": "~1.2.2",
     "@angularclass/hmr-loader": "^3.0.4",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
     "@ngrx/core": "^1.2.0",
-    "@ngrx/store": "2.2.3",
+    "@ngrx/effects": "^4.1.1",
+    "@ngrx/store": "^4.1.1",
+    "@swimlane/ngx-datatable": "^10.0.5",
+    "angular2-image-upload": "^1.0.0-rc.0",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
+    "ng-bootstrap": "^1.6.3",
+    "ng-bootstrap-to-bootstrap-3": "^0.7.0",
+    "ng2-imageupload": "^1.4.2",
     "reflect-metadata": "^0.1.10",
-    "rxjs": "~5.0.2",
+    "rxjs": "~5.4.0",
+    "ts-md5": "^1.2.2",
     "zone.js": "0.8.14"
   },
   "devDependencies": {
@@ -148,11 +157,11 @@
     "tslint": "~4.5.1",
     "tslint-loader": "^3.5.2",
     "typedoc": "^0.7.1",
-    "typescript": "~2.2.2",
+    "typescript": "~2.5.3",
     "url-loader": "^0.5.8",
     "webpack": "~2.6.1",
     "webpack-dev-middleware": "^1.10.1",
-    "webpack-dev-server": "~2.4.2",
+    "webpack-dev-server": "^2.9.4",
     "webpack-dll-bundles-plugin": "^1.0.0-beta.5",
     "webpack-merge": "~4.1.0"
   },
